deployAPI-Gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: my-family-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "api-gateway"
        dapr.io/app-port: "5000"
        dapr.io/sidecar-http-port: "3500"
    spec:
      containers:
      - name: api-gateway
        image: registry.moglidev.xyz/my-family-net-api-gateway:1.0.0-JENKINS-93
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
      imagePullSecrets:
      - name: registry-moglidev-xyz-secret
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: my-family-net
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - port: 80
    targetPort: 5000
