deployApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: my-family-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-react-front
        image: registry.moglidev.xyz/my-family-net-app:1.0.0-Dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
      imagePullSecrets:
      - name: registry-moglidev-xyz-secret
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: my-family-net
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
  - port: 3080
    targetPort: 3000
