deployAppNG.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ng
  namespace: my-family-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ng
  template:
    metadata:
      labels:
        app: app-ng
    spec:
      containers:
      - name: app-react-front-ng
        image: registry.moglidev.xyz/my-family-net-front-ng:1.0.0-21
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
      imagePullSecrets:
      - name: registry-moglidev-xyz-secret
---
apiVersion: v1
kind: Service
metadata:
  name: app-ng-svc
  namespace: my-family-net
spec:
  type: LoadBalancer
  selector:
    app: app-ng
  ports:
  - port: 80
    targetPort: 80
